DM: Add some character macros

--- a/data/campaigns/Delfadors_Memoirs/scenarios/04_Leollyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/04_Leollyn.cfg
@@ -89,10 +89,7 @@
         user_team_name= _ "Loyalists"
         {FLAG_VARIANT loyalist}
         [leader]
-            id=Leollyn
-            name= _ "Leollyn"
-            type=Arch Mage
-            profile=portraits/leollyn.png
+            {LEOLLYN}
             facing=se
         [/leader]
         {UNIT 3 Spearman 2 18 (ai_special=guardian)} {FACING se}
