--- a/data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg
@@ -28,10 +28,7 @@
         user_team_name= _ "Loyalists"
         {FLAG_VARIANT loyalist}
         [leader]
-            id=Garard
-            name=_ "Garard"
-            type=King of Wesnoth
-            profile=portraits/garard.png
+            {GARARD_II}
         [/leader]
         # guards are facing outward
         {UNIT 2 (Royal Guard) 23 18 (facing=nw)}
@@ -49,10 +46,7 @@
 
         [unit]
             side=2
-            id=Leollyn
-            name=_ "Leollyn"
-            type=Arch Mage
-            profile=portraits/leollyn.png
+            {LEOLLYN}
             x,y=27,21
             facing=ne
         [/unit]
