--- a/data/campaigns/Delfadors_Memoirs/scenarios/22_Face_of_the_Enemy.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/22_Face_of_the_Enemy.cfg
@@ -65,10 +65,7 @@
         user_team_name= _ "Undead"
         {FLAG_VARIANT undead}
         [leader]
-            id="Sagus"
-            name=_ "Sagus"
-            type=Lich
-            profile="portraits/undead/brown-lich.png"
+            {SAGUS}
             facing=nw
         [/leader]
         [ai]
