--- a/data/campaigns/Delfadors_Memoirs/utils/characters.cfg
+++ b/data/campaigns/Delfadors_Memoirs/utils/characters.cfg
@@ -134,6 +134,34 @@
     [/modifications]
 #enddef
 
+#define LEOLLYN
+    id=Leollyn
+    name= _ "Leollyn"
+    type=Arch Mage
+    profile=portraits/leollyn.png
+#enddef
+
+#define GARARD_II
+    id=Garard II
+    name=_ "Garard II"
+    type=King of Wesnoth
+    profile="portraits/garard.png"
+#enddef
+
+#define ZORLAN
+    id=Zorlan
+    name=_ "Zorlan"
+    type=Orcish Sovereign
+    profile="portraits/zorlan.png"
+#enddef
+
+#define SAGUS
+    id="Sagus"
+    name=_ "Sagus"
+    type=Lich
+    profile="portraits/undead/brown-lich.png"
+#enddef
+
 #define ILIAH_MALAL TYPE
     id=Iliah-Malal
     name=_ "Iliah-Malal"
