--- a/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
@@ -58,10 +58,7 @@
         user_team_name= _ "Loyalists"
         {FLAG_VARIANT loyalist}
         [leader]
-            id=Garard II
-            name=_ "Garard II"
-            type=King of Wesnoth
-            profile="portraits/garard.png"
+            {GARARD_II}
             facing=nw
         [/leader]
         [ai]
@@ -99,10 +96,7 @@
         user_team_name= _ "Pillagers"
         {FLAG_VARIANT6 ragged}
         [leader]
-            id=Zorlan
-            name=_ "Zorlan"
-            type=Orcish Sovereign
-            profile="portraits/zorlan.png"
+            {ZORLAN}
             facing=sw
         [/leader]
     [/side]
