ANL: leaders take advantage of player's castles / villages

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -494,6 +494,7 @@
     [/event]
 
     # Make AI units destroy player’s buildings
+    # (AI leaders are excluded to not lower their defense)
 
     # Villages
     [event]
@@ -501,6 +502,7 @@
         first_time_only=no
         [filter]
             side=5,6,7,8
+            canrecruit=no
             [filter_location]
                 terrain=Gg^Vh
             [/filter_location]
@@ -535,6 +537,7 @@
         first_time_only=no
         [filter]
             side=5,6,7,8
+            canrecruit=no
             [filter_location]
                 terrain=Gg^Ve,Gg^Vea,Ch,Ce,Cv,Chr,Chw,Chs,Ke,Kv,Kh,Khr
             [/filter_location]
@@ -555,6 +558,7 @@
         first_time_only=no
         [filter]
             side=5,6,7,8
+            canrecruit=no
             [filter_location]
                 terrain=Hh^Vhh
             [/filter_location]
@@ -574,6 +578,7 @@
         first_time_only=no
         [filter]
             side=5,6,7,8
+            canrecruit=no
             [filter_location]
                 terrain=Mm^Vhh
             [/filter_location]
