ANL: avoid unnecessary unstoring

--- a/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
+++ b/data/multiplayer/scenarios/ANL_utils/ANL_special_macros.cfg
@@ -58,9 +58,9 @@
                 value=$leader.name
             [/set_variable]
 
-            [unstore_unit]
-                variable=leader
-            [/unstore_unit]
+            [clear_variable]
+                name=leader
+            [/clear_variable]
         [/then]
     [/if]
 #enddef
