DM: Standardize Garard II's name when he is speaking

--- a/data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg
@@ -78,7 +78,7 @@
         # wmllint: recognize Lionel
 
         [message]
-            speaker=Garard
+            speaker=Garard II
             message=_"Ah, now the last of my council is here. Lionel, what tidings from the north?"
         [/message]
         [message]
@@ -90,7 +90,7 @@
             message=_"Worse news — the orcs are already here, sire. I myself was set upon within the royal forest. Were it not for this young fellow here..."
         [/message]
         [message]
-            speaker=Garard
+            speaker=Garard II
             message=_"Then there is no time to be lost! I will ride to the Ford of Abez with an army. As bold as the orcs may be to cross our borders in secret and prey on the defenseless, they are disorganized and cowardly in the face of a foe worth their mettle. They need reminding that Wesnoth is too hot for them. Gurcyn, you have been to the west — will the Elves lend their archers to help us?"
         [/message]
         [message]
@@ -102,13 +102,13 @@
             message=_"Your majesty... may I join your army? I mean, I came to Weldyn to seek your employ. And if it’s archers you need, might not a mage be of help?"
         [/message]
         [message]
-            speaker=Garard
+            speaker=Garard II
             message=_"Ah, young Delfador... you speak well, and Leollyn has already told me of your bravery. I accept your offer of service with gratitude, but this is a task for warriors, not magic-makers. You shall stay here with Leollyn and be Leollyn’s right hand as he is mine."
         [/message]
 
-        {MOVE_UNIT (id=Garard) 24 14}
+        {MOVE_UNIT (id=Garard II) 24 14}
         [kill]
-            id=Garard
+            id=Garard II
         [/kill]
 
         [scroll_to_unit]
