--- a/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
@@ -264,7 +264,7 @@
             message= _ "Victory!"
         [/message]
         [message]
-            id="Garard II"
+            id=Garard II
             message= _ "Delfador! And you, elvish friends! The kingdom of Wesnoth is in your debt today!"
         [/message]
         [message]
@@ -272,7 +272,7 @@
             message= _ "My King, this is Kalenz, High Lord of the Elves."
         [/message]
         [message]
-            id="Garard II"
+            id=Garard II
             message= _ "You will be forever welcome in the court of Wesnoth."
         [/message]
         [message]
@@ -334,7 +334,7 @@
         [/filter]
 
         [message]
-            speaker="Garard II"
+            speaker=Garard II
             message= _ "The enemy is drawing near. My personal guards must join the fight. We can only hope help arrives soon."
         [/message]
 
