--- a/data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg
@@ -30,7 +30,7 @@
         [/part]
         [part]
             background=story/portraits/garard-large.png
-            story={CAPTION ( _ "King Garard")} + _ "We have assembled here with good and bad news: The good news is that the orcs have been defeated decisively. Their Great Chief is dead and their army has been scattered. We owe much of this great victory to Delfador."
+            story={CAPTION ( _ "Garard II")} + _ "We have assembled here with good and bad news: The good news is that the orcs have been defeated decisively. Their Great Chief is dead and their army has been scattered. We owe much of this great victory to Delfador."
         [/part]
         [part]
             background=story/portraits/young_delfador-large.png
@@ -42,7 +42,7 @@
         [/part]
         [part]
             background=story/portraits/garard-large.png
-            story={CAPTION ( _ "King Garard")} + _ "Peace, Lionel. The elves fought well and have earned Our respect. But this council is here to address an alarming matter. Young master Delfador here reports of an undead threat. He was able to fight them off at Parthyn Ford, but more are coming."
+            story={CAPTION ( _ "Garard II")} + _ "Peace, Lionel. The elves fought well and have earned Our respect. But this council is here to address an alarming matter. Young master Delfador here reports of an undead threat. He was able to fight them off at Parthyn Ford, but more are coming."
         [/part]
         [part]
             background=portraits/lionel.png
@@ -66,7 +66,7 @@
         [/part]
         [part]
             background=story/portraits/garard-large.png
-            story={CAPTION ( _ "King Garard")} + _ "You have proven your bravery, young Delfador, but I think you underestimate the might of our army."
+            story={CAPTION ( _ "Garard II")} + _ "You have proven your bravery, young Delfador, but I think you underestimate the might of our army."
         [/part]
 
         [part]
@@ -75,7 +75,7 @@
         [/part]
         [part]
             background=story/portraits/garard-large.png
-            story={CAPTION ( _ "King Garard")} + _ "No, Lionel. This should be too simple a task for my best general. I will send Dudpon instead with most of my army."
+            story={CAPTION ( _ "Garard II")} + _ "No, Lionel. This should be too simple a task for my best general. I will send Dudpon instead with most of my army."
         [/part]
         [part]
             background=portraits/lionel.png
@@ -83,7 +83,7 @@
         [/part]
         [part]
             background=story/portraits/garard-large.png
-            story={CAPTION ( _ "King Garard")} + _ "As a reward for Delfador’s bravery, I am temporarily appointing you and your men to be his personal guard. Make sure nothing untoward happens to him, as the circumstances of Leollyn’s death are not fully clear."
+            story={CAPTION ( _ "Garard II")} + _ "As a reward for Delfador’s bravery, I am temporarily appointing you and your men to be his personal guard. Make sure nothing untoward happens to him, as the circumstances of Leollyn’s death are not fully clear."
         [/part]
         [part]
             background=portraits/lionel.png
@@ -99,7 +99,7 @@
         [/part]
         [part]
             background=story/portraits/garard-large.png
-            story={CAPTION ( _ "King Garard")} + _ "This is a disaster. I should have led the army myself and died with them. And I should have listened to you, Delfador."
+            story={CAPTION ( _ "Garard II")} + _ "This is a disaster. I should have led the army myself and died with them. And I should have listened to you, Delfador."
         [/part]
         [part]
             background=portraits/lionel.png
@@ -111,7 +111,7 @@
         [/part]
         [part]
             background=story/portraits/garard-large.png
-            story={CAPTION ( _ "King Garard")} + _ "Yes, Delfador. This time we will follow your advice."
+            story={CAPTION ( _ "Garard II")} + _ "Yes, Delfador. This time we will follow your advice."
         [/part]
         [part]
             background=story/portraits/young_delfador-large.png
@@ -123,7 +123,7 @@
         [/part]
         [part]
             background=story/portraits/garard-large.png
-            story={CAPTION ( _ "King Garard")} + _ "Very well, Lionel, take command."
+            story={CAPTION ( _ "Garard II")} + _ "Very well, Lionel, take command."
         [/part]
         [part]
             background=story/portraits/young_delfador-large.png
@@ -135,7 +135,7 @@
         [/part]
         [part]
             background=story/portraits/garard-large.png
-            story={CAPTION ( _ "King Garard")} + _ "Delfador could. You will command the heavy infantry. Make sure to shield the mages in battle, for they are precious. Now, go, close the portal and come back soon!"
+            story={CAPTION ( _ "Garard II")} + _ "Delfador could. You will command the heavy infantry. Make sure to shield the mages in battle, for they are precious. Now, go, close the portal and come back soon!"
         [/part]
     [/story]
 
