DM: Use speaker instead of id in [message]

--- a/data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg
@@ -123,7 +123,7 @@
             id=Methor
         [/filter]
         [message]
-            id=Delfador
+            speaker=Delfador
             message=_"No! Methor... Don’t die!"
         [/message]
         [message]
@@ -150,14 +150,14 @@
             [/then]
             [else]
                 [message]
-                    id=Delfador
+                    speaker=Delfador
                     message=_"I will grieve for master Methor... I must take his advice and seek out Leollyn."
                 [/message]
                 {VARIABLE methor_alive no}
             [/else]
         [/if]
         [message]
-            id=Delfador
+            speaker=Delfador
             message=_"And it is no good news I will bring him. Orcs, so far south and so near the capital? This is a dire sign; things are gravely amiss in Wesnoth."
         [/message]
     [/event]
