--- a/data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg
@@ -242,7 +242,7 @@
             message= _ "This is the nearest human garrison, Delfador. Here is the only place to cross the river. Soon after the last King of Wesnoth began his reign, he put a strong garrison not far south of here in the town of Parthyn, and orcs have not been able to cross into Wesnoth over this part of the river since."
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "This mist is unusual, though, even if we are close to the river. I have never seen it so thick before."
         [/message]
     [/event]
@@ -250,11 +250,11 @@
     [event]
         name=turn 2
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "There should be no orcs this far south. But I do not like the feel of this mist."
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "Stay close. I don’t like the feel of it either."
         [/message]
     [/event]
@@ -393,7 +393,7 @@
             [/then]
         [/if]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "One of Iliah-Malal’s creatures. So it has begun!"
         [/message]
         [set_variable]
