--- a/data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg
@@ -200,11 +200,11 @@
     [event]
         name=start
         [message]
-            id=Tan-drul
+            speaker=Tan-drul
             message= _ "Kill these filthy elves! All warlords will then accept our leader, Zorlan, as king and he will reward you all!"
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "This is what we have been training for! Now we drive these beasts back!"
         [/message]
     [/event]
@@ -216,13 +216,13 @@
             [case]
                 value="Elvish Shyde"
                 [message]
-                    id=Kalenz
+                    speaker=Kalenz
                     message= _ "The orcs are retreating! And... what is this? A shyde flying towards us as if hell were on her heels..."
                 [/message]
             [/case]
             [else]
                 [message]
-                    id=Kalenz
+                    speaker=Kalenz
                     message= _ "The orcs are retreating! And... what is this? A druid running to meet us as though hell were on her heels..."
                 [/message]
             [/else]
@@ -241,60 +241,60 @@
 
         {INCIDENTAL_MUSIC love_theme.ogg}
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "My lord Kalenz, at last I have found you!"
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Chantal! Granddaughter! What are you doing here? You were not attacked, I hope."
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "We were, but the enemy was vanquished. There are much more serious matters that require your attention."
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "A paramount chief of all the Orcs has arisen, and he is setting a trap for the humans at the Ford of Abez. I think we must aid the humans, lest we be defeated separately once they are crushed."
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "There is more ill news. Evil has been unleashed. A portal has been opened from the Land of the Dead. An army of undead is being raised as we speak."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "This is very serious. Have you informed the elvish settlements?"
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "Yes. And I have prepared holy water for our warriors. They should be able to hold against the undead in our forests, at least for now."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Holy water? What is this? Have you been dabbling where you should not, in the Book of Crelanu?"
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "No. But Cleodil gave some of the Book’s least dangerous secrets to her daughters, and so I had them from my mother. And I think I have found the one we have been awaiting since Cleodil accepted the guardianship of the Book. You know of what I speak."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "I never thought to see such a human, not even in all the years I have lived. Who is this person?"
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "Delfador, a mage trusted of their King. He has survived a passage through the Land of the Dead not merely alive but uncorrupted. He helped us defeat the orcs when they threatened Lintanir, and I fought undead with him at Parthyn Ford. I have come north partly because I am thinking to fetch the Book of Crelanu so I can take it to him."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "He is uncorrupted? You are sure of this?"
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "I have bent my healing senses upon him. I am as sure as I can be."
         [/message]
         {INCIDENTAL_MUSIC loyalists.ogg}
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Then we must aid him, and I must meet him. The King of Wesnoth is just a king; it is inner strength such as you describe that will turn back the darkness, if anything can. West, to the Ford of Abez!"
         [/message]
     [/event]
