--- a/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg
@@ -236,23 +236,23 @@
         name=start
 
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "It appears we have arrived just in time! The King stands at bay, surrounded by the enemy."
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "I fear we may be too late. This new warlord must have united every orcish tribe north of the Great River. Look at their army, it is vast!"
         [/message]
         [message]
-            id=Zorlan
+            speaker=Zorlan
             message= _ "Elves! I heard you have been looking for me! But you will save neither the human prince, nor yourselves."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "We must destroy this warlord now, before his power grows any greater!"
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "Agreed, but we must make haste, for the King is hard pressed."
         [/message]
     [/event]
@@ -260,63 +260,63 @@
     [event]
         name=victory
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Victory!"
         [/message]
         [message]
-            id=Garard II
+            speaker=Garard II
             message= _ "Delfador! And you, elvish friends! The kingdom of Wesnoth is in your debt today!"
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "My King, this is Kalenz, High Lord of the Elves."
         [/message]
         [message]
-            id=Garard II
+            speaker=Garard II
             message= _ "You will be forever welcome in the court of Wesnoth."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "We look forward to fighting beside you to defeat those threats that remain."
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "Your Majesty, we have more urgent matters. Leollyn sent me on a mission to find out why the dead are restless. A foul necromancer has opened a portal to the land of the dead. It must be closed at all costs, and I am afraid my skills may be insufficient for that task."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Delfador, our weapons are weak against the undead, but perhaps we have other help to give you. Centuries ago the great mage Crelanu entrusted to us a book of lore, powerful knowledge, perilous secrets that it took Crelanu all his life to gather."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Crelanu charged us to guard his book until someone worthy of it appeared. We believe you are that one, Delfador. The book may help you find a way to close that portal."
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "Friends, your words do me perhaps greater honor than I deserve. I am not sure I am worthy of this charge."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Chantal and I are sure of your quality. But be warned: there is a curse on this book. Crelanu fairly warned us that his arts would bring much woe down upon us. And so it proved, though at the time we had no other choice. The victories you win with it may cost you as dearly."
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "Curse or no, we must close that portal soon, or else we are all doomed."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "This is a decision you will have to make. If we fight the undead without the book’s help, it will be an honor to fight by your side, no matter what the outcome."
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "I think I, too, have no choice but to accept the book. I cannot allow the sure death of many humans and elves for fear of the curse."
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "Then here it is, Delfador. May it help you bring a swift end to the undead menace. And may it cost you less than it has cost us..."
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "Thank you, friends. May we meet again in happier times. Now I must make haste, for I need to study the book and prepare for the battle with the undead."
         [/message]
 
