--- a/data/campaigns/Delfadors_Memoirs/scenarios/20_Prince_of_Wesnoth.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/20_Prince_of_Wesnoth.cfg
@@ -160,15 +160,15 @@
         [/lift_fog]
 
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Generals of Wesnoth: you have attacked defenseless elvish land. You must leave immediately. I am Kalenz, High Lord of the Elves. Delfador the Great will confirm the treaty between us."
         [/message]
         [message]
-            id=Eldred
+            speaker=Eldred
             message= _ "This is elvish land no more. I, Eldred, prince of Wesnoth and heir to the throne, claim it for Wesnoth and Queen Asheviere. Delfador does not rule in Wesnoth!"
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "I did not want to spill human blood, but this arrogant prince leaves me no other choice."
         [/message]
     [/event]
@@ -209,31 +209,31 @@
         {DELFADOR_LIGHTNING}
 
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "Peace, friends! I have been riding nonstop for days to prevent this madness! Eldred, I have direct orders from the King to take you back to the Palace, where you will be reprimanded for your inexcusable actions. Kalenz, the King offers his deepest apologies for these events and promises to do anything in his power to make amends."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Delfador! I am glad to see you. We have no demands on the King, but I believe he should be very careful, for he does not seem to be the only ruler in Wesnoth!"
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "Kalenz, I am very worried. There is a cloud of evil swirling around the Royal Palace, and it has more centers than the prince alone. I see dark days ahead..."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "I wonder if the Book of Crelanu is not behind this. The Book is not evil in itself, but the power it gives tends to magnify any evil in the reader’s soul. Delfador, has anyone but you opened its covers since you got it from us?"
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "I do not think so. But... Asheviere, Garard’s queen and Eldred’s mother, seemed to be hinting some months ago that I should teach her magery. She ceased all such talk when I did not respond, and I thought it merely the momentary whim of a proud and willful woman."
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "I wonder if we have not dangerously misjudged her..."
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "It may be so. Now that I think on it, I think I had best return to the Palace more swiftly than I came here, even if I have to kill three horses under me to do it."
         [/message]
 
@@ -247,7 +247,7 @@
     [event]
         name=time over
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "We are too late! All is lost!"
         [/message]
     [/event]
