--- a/data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/21_Clash_at_the_Manor.cfg
@@ -172,19 +172,19 @@
         name=start
 
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "I am grieved to have to resort to this. Yet the book must be recovered at all costs and no one should be left alive."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "The book’s curse is already weighing heavy upon you, friend. But we cannot falter. We have acquired orcish weapons, as you have requested. Nobody will be able to link this to you or the elves."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Make sure everybody hears the orders. Nobody must escape."
         [/message]
         [message]
-            id=Rhuwin
+            speaker=Rhuwin
             message= _ "Elves! And that traitor, Delfador is with them! Riders, quickly, go alert the queen. And guards, prepare to strike them down!"
         [/message]
 
@@ -340,7 +340,7 @@
     [event]
         name=new-objectives
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "The guards are slain. Now we must look for the book."
         [/message]
         [objectives]
@@ -371,7 +371,7 @@
             [/music]
 
             [message]
-                id=$unit.id
+                speaker=unit
                 message= _ "This looks like a secret door. Let’s see where it leads..."
             [/message]
             [terrain]
@@ -511,7 +511,7 @@
     [event]
         name=time over
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "Reinforcements on the horizon. We are too late!"
         [/message]
         [endlevel]
