--- a/data/campaigns/Delfadors_Memoirs/scenarios/14_Shadows.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/14_Shadows.cfg
@@ -152,7 +152,7 @@
         name=start
 
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "This forest looks quiet — too quiet. Proceed carefully, I don’t like this at all."
         [/message]
     [/event]
@@ -168,15 +168,15 @@
             [/filter]
         [/lift_fog]
         [message]
-            id=Barth-Malal
+            speaker=Barth-Malal
             message= _ "Living... Soon, you’ll be more troops for my master!"
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Undead! Where did they come from?"
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "We should try to go west. I sense things are worse on the eastern front."
         [/message]
     [/event]
@@ -254,31 +254,31 @@
         [/fire_event]
 
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "Foul creatures, it is time for your final rest!"
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "That is Delfador. Do you see, now?"
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "I do. He is like a blazing fire to my inner eye. I think you have chosen well, granddaughter; he is indeed the one to whom the Book of Crelanu should pass."
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "If I were human, I think I would be in love with him."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "If you were human, you would be quite right to be. Strange... they are such surly children in the main, short-lived and crude and quarrelsome. And yet, even our greatest mystics do not shine so brightly as this one."
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "I hope the Book does not destroy him."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "You speak my thought, granddaughter. May it be so."
         [/message]
 
@@ -347,26 +347,26 @@
                     name=delfador
                 [/fire_event]
                 [message]
-                    id=Delfador
+                    speaker=Delfador
                     message= _ "I arrive too late for the entertainment, it would seem."
                 [/message]
             [/then]
         [/if]
 
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Well met, Delfador. Chantal has told me of you. I am Kalenz, High Lord of the Elves, and we are in your debt today."
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "It is my honor to meet you. And it relieves my mind to know Chantal is safe and with her kin again."
         [/message]
         [message]
-            id=Chantal
+            speaker=Chantal
             message= _ "I am not sure there is safety for anyone in these days, but we all travel the same road and face the same foes."
         [/message]
         [message]
-            id=Kalenz
+            speaker=Kalenz
             message= _ "Yes. We will follow you to the Ford of Abez, Delfador. Let us hope we are not too late to prevent an orcish victory there."
         [/message]
 
