--- a/data/campaigns/Delfadors_Memoirs/scenarios/18_The_Portal_of_Doom.cfg
+++ b/data/campaigns/Delfadors_Memoirs/scenarios/18_The_Portal_of_Doom.cfg
@@ -468,15 +468,15 @@
         [/modify_side]
 
         [message]
-            id=Iliah-Malal
+            speaker=Iliah-Malal
             message= _ "What’s going on here? Is this Delfador? Welcome to your doom, Delfador!"
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "They have reinforcements. Hurry, we must close the portal before we are overrun!"
         [/message]
         [message]
-            id=Iliah-Malal
+            speaker=Iliah-Malal
             message= _ "Slay them all!"
         [/message]
     [/event]
@@ -499,7 +499,7 @@
             message=_ "Fool! You could not kill me in the land of the dead, nor can you in the land of the living! I transcend both death and life, and I will destroy you!"
         [/message]
         [message]
-            id=Delfador
+            speaker=Delfador
             message= _ "We cannot defeat him now. We must carry out our mission first, so we will be able to defeat him later."
         [/message]
         # He gets a full heal, not an advance, otherwise we'd have to make sure we ported him to the next scenario properly
