ANL: refactor income change
This opens up the possibility to change the income

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -400,6 +400,8 @@
     {ANL_RESCUE_TRAPPED_UNIT 35 43 36 43}
 
     # Destroying mushroom mines
+    # reduces base income by 10g and destroys the village worthy 3g more
+    # -12 instead of -10 because [side]income is always 2 lower than [store_side]base_income
 
     [event]
         name=moveto
@@ -409,9 +411,13 @@
             side=1,2,3,4
         [/filter]
 
+        [store_side]
+            side=5
+            variable=side
+        [/store_side]
         [modify_side]
             side=5
-            income=10
+            income="$($side.base_income-12)"
         [/modify_side]
         {MODIFY_TERRAIN Uh $x1 $y1}
         [sound]
@@ -422,6 +428,7 @@
             image=terrain/village/cave-tile.png
             message= _ "You destroy the mushroom mine. The northwest undead now have 10 less income."
         [/message]
+        {CLEAR_VARIABLE side}
     [/event]
 
     [event]
@@ -432,9 +439,13 @@
             side=1,2,3,4
         [/filter]
 
+        [store_side]
+            side=6
+            variable=side
+        [/store_side]
         [modify_side]
             side=6
-            income=10
+            income="$($side.base_income-12)"
         [/modify_side]
         {MODIFY_TERRAIN Uh $x1 $y1}
         [sound]
@@ -445,6 +456,7 @@
             image=terrain/village/cave-tile.png
             message= _ "You destroy the mushroom mine. The northeast orcs now have 10 less income."
         [/message]
+        {CLEAR_VARIABLE side}
     [/event]
 
     [event]
@@ -455,9 +467,13 @@
             side=1,2,3,4
         [/filter]
 
+        [store_side]
+            side=7
+            variable=side
+        [/store_side]
         [modify_side]
             side=7
-            income=10
+            income="$($side.base_income-12)"
         [/modify_side]
         {MODIFY_TERRAIN Uh $x1 $y1}
         [sound]
@@ -468,6 +484,7 @@
             image=terrain/village/cave-tile.png
             message= _ "You destroy the mushroom mine. The southwest orcs now have 10 less income."
         [/message]
+        {CLEAR_VARIABLE side}
     [/event]
 
     [event]
@@ -478,9 +495,13 @@
             side=1,2,3,4
         [/filter]
 
+        [store_side]
+            side=8
+            variable=side
+        [/store_side]
         [modify_side]
             side=8
-            income=10
+            income="$($side.base_income-12)"
         [/modify_side]
         {MODIFY_TERRAIN Uh $x1 $y1}
         [sound]
@@ -491,6 +512,7 @@
             image=terrain/village/cave-tile.png
             message= _ "You destroy the mushroom mine. The southeast undead now have 10 less income."
         [/message]
+        {CLEAR_VARIABLE side}
     [/event]
 
     # Make AI units destroy player’s buildings
