ANL: income lock no longer required

--- a/data/multiplayer/scenarios/4p_A_New_Land.cfg
+++ b/data/multiplayer/scenarios/4p_A_New_Land.cfg
@@ -118,7 +118,7 @@
         village_gold=2
         team_lock=yes
         gold_lock=no
-        income_lock=yes
+        income_lock=no
         type=Death Knight
         name= _ "Mal Sevu"
 #ifdef MULTIPLAYER_A_NEW_LAND_LOAD
@@ -149,7 +149,7 @@
         village_gold=2
         team_lock=yes
         gold_lock=no
-        income_lock=yes
+        income_lock=no
         type=Orcish Sovereign
         name= _ "Gol Goroth"
 #ifdef MULTIPLAYER_A_NEW_LAND_LOAD
@@ -180,7 +180,7 @@
         village_gold=2
         team_lock=yes
         gold_lock=no
-        income_lock=yes
+        income_lock=no
         type=Orcish Sovereign
         name= _ "Greg"
 #ifdef MULTIPLAYER_A_NEW_LAND_LOAD
@@ -211,7 +211,7 @@
         village_gold=2
         team_lock=yes
         gold_lock=no
-        income_lock=yes
+        income_lock=no
         type=Death Knight
         name= _ "Mal Shiki"
 #ifdef MULTIPLAYER_A_NEW_LAND_LOAD
